final fixes to align items

--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@ button {
     width: 360px;
     height: 640px;
     background-color: #000000;
+    border-radius: 5px;
 }
 #buttons-container {
     width: 100%;
     height: 600px;
     columns: 3;
-    margin-top: 12%;
+    margin-top: 20%;
     margin-left: 4%;
 }
 #display {
@@ -19,11 +20,13 @@ button {
     height: 67px;
     border-radius: 5px;
     background-color: #7b9e87;
+    display: inline-block;
+    margin-top: 5%;
 }
 #display-container {
     width: 340px;
     height: 40px;
-    margin: 0 auto;
+    margin: auto;
 }
 #equals {
     background-color: #ff9500;
